// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connector mapStateToProps returns the correct object 1`] = `
Object {
  "autocomplete": undefined,
  "contacts": Array [
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/ecommerceil/128.jpg",
      "community": "Associate",
      "id": "71862",
      "name": "Ahmad Bernier",
    },
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/akmalfikri/128.jpg",
      "community": "Associate",
      "id": "72655",
      "name": "Leora Bahringer",
    },
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/markjenkins/128.jpg",
      "community": "Associate",
      "id": "72019",
      "name": "Vita Breitenberg",
    },
  ],
  "matches": Array [],
  "participantSearch": null,
  "participants": Array [
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/matthewkay_/128.jpg",
      "id": "72203",
      "name": "Brooks Funk",
    },
  ],
  "recentContacts": Array [],
}
`;

exports[`matches the last snapshot for fetchContacts 1`] = `
Object {
  "graphql": Object {
    "query": 20,
    "variables": Object {
      "first": "I see trees of green",
    },
  },
  "meta": Object {
    "extractModel": "Person",
    "holochainAPI": true,
  },
  "type": "FETCH_CONTACTS",
}
`;

exports[`matches the last snapshot for fetchRecentContacts 1`] = `
Object {
  "graphql": Object {
    "query": 20,
    "variables": Object {
      "first": "I see them bloom",
    },
  },
  "meta": Object {
    "extractModel": "PersonConnection",
  },
  "type": "FETCH_RECENT_CONTACTS",
}
`;

exports[`matches the last snapshot for findOrCreateThread 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($participantIds: [String]) {
  findOrCreateThread(data: {participantIds: $participantIds}) {
    id
    createdAt
    updatedAt
    participants {
      id
      name
      avatarUrl
    }
  }
}",
    "variables": Object {
      "createdAt": "All the lonely people / Where do they all come from?",
      "participantIds": Array [
        "1",
        "2",
        "3",
      ],
    },
  },
  "meta": Object {
    "extractModel": "MessageThread",
    "holochainAPI": false,
  },
  "type": "FIND_OR_CREATE_THREAD",
}
`;
